# ge

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  LICENSE  Makefile  Module.mk  NOTICES.md  README.md  STABILITY.md  agents-guide.md  arena.hpp  bullseye.yaml  codec.hpp  codec_test  codec_test.cpp  codec_test.d  doctest.h  ge.hpp  json.hpp  loguru.cpp  math.hpp  math_bench.cpp  math_codec.hpp  math_ios.hpp  math_test.cpp  math_test.d  rpc.hpp  rpc_test.cpp  rpc_test.d
.claude/skills/assign/: SKILL.md
.claude/skills/close-bug/: SKILL.md
.claude/skills/comment/: SKILL.md
.claude/skills/file-bug/: SKILL.md
.github/workflows/: build.yaml  release-ged.yml  release-player-ios.yml  release-sqd.yml
android-shared/src/main/java/ge/: GeActivity.java  IapBridge.java
docs/: TODO.md  ge-remote.md  gewire_relay.puml  gewire_transport.puml  iap-testing.md  rendering-library-choice.md  squz-remote.md  targets.md
docs/issues/: README.md
docs/papers/: adreno-830-bgfx-vulkan-crash.md  physics-temporal-optimization.md
docs/plans/: upstream-bgfx-ios-rotation.md
formal/: GeWire.tla  GedSessionLifecycle.cfg  GedSessionLifecycle.tla  GedSessionLifecycle_TTrace_1772415432.tla  GedWireHandshake.cfg  GedWireHandshake.tla  tlc
ged/: .goreleaser.yaml  agents-guide.md  bridge.go  daemon.go  daemon_test.go  dashboard.go  embed.go  go.mod  go.sum  main.go  mcp.go  player.go  qr.go  server.go  stream.go
include/: BgfxContext.h  BgfxResource.h  CaptureTarget.h  DampedValue.h  GpuContext.h  ImageDiff.h  ManifestLoader.h  ManifestSchema.h  Mesh.h  Model.h  Program.h  Render.h  SdlContext.h  ShaderUtil.h  Texture.h
include/ge/: Audio.h  BgfxContext.h  BindGroup.h  CaptureTarget.h  DampedRotation.h  DampedValue.h  Db.h  DeltaTimer.h  FileIO.h  FontLoader.h  FrameLog.h  GeTexFormat.h  GlobeController.h  GpuContext.h  ImageDiff.h  Linalg.h  LoadTexture.h  ManifestLoader.h  ManifestSchema.h  Mesh.h  Model.h  ModelFormat.h  Pipeline.h  PlayerRender.h  PlayerWireBridge.h  Protocol.h  RasterizeText.h  RenderHost.h  Resource.h  SdlContext.h  Session.h  SessionHost.h  ShaderUtil.h  SharedTexture.h  Signal.h  SpriteBatch.h  SqTexFormat.h  StreamSession.h  SvgRasterizer.h  SvgSprite.h  (+23 more)
include/sq/: Audio.h  BgfxResource.h  BindGroup.h  CaptureTarget.h  DampedRotation.h  DeltaTimer.h  FileIO.h  GlobeController.h  GpuContext.h  GpuResource.h  ImageDiff.h  ManifestLoader.h  Mesh.h  Model.h  ModelFormat.h  Pipeline.h  Protocol.h  Resource.h  SdlContext.h  Session.h  ShaderUtil.h  SqTexFormat.h  TextRenderer.h  Texture.h  TextureEncoder.h  WgpuResource.h  WireSession.h  WireTransport.h
protocol/: ge_wire.yaml  gewire_gen.go
sample/tiltbuggy/: Makefile
sample/tiltbuggy/shaders/: simple_vs.sc  varying.def.sc
sample/tiltbuggy/src/: Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  main.cpp
sample/tiltcal/: Makefile
sample/tiltcal/src/: main.cpp
scripts/: apply-vendor-patches.sh  run-protogen.sh
shaders/: test.wgsl  test_fs.sc  test_vs.sc  varying.def.sc
sqd/: .goreleaser.yaml  daemon.go  daemon_test.go  dashboard.go  embed.go  go.mod  go.sum  lan.go  main.go
src/: Attitude.h  Attitude_android.cpp  Attitude_apple.mm  Attitude_stub.cpp  Audio.cpp  BgfxContext.cpp  BgfxContext.mm  BgfxContext_test.cpp  BindGroup.cpp  CaptureTarget.cpp  Context.cpp  CutoutInsets.h  CutoutInsets_android.cpp  CutoutInsets_stub.cpp  DaemonSink.h  DampedRotation_test.cpp  DashboardSink.h  Db.cpp  DirectRenderHost.mm  FileIO.cpp  FontLoader_android.cpp  FontLoader_apple.mm  GpuContext.cpp  GpuContext_test.cpp  HttpServer.cpp  HttpServer.h  ImageDiff.cpp  Immersive.h  Immersive_android.cpp  Immersive_stub.cpp  LoadTexture.cpp  LoadTexture_test.cpp  ManifestLoader.cpp  Mesh.cpp  MeshInternal.h  Model.cpp  NativeSurface.h  NativeSurface_android.cpp  NativeSurface_apple.cpp  Ortho_test.cpp  (+64 more)
src/bridge/: PlayerWireBridge.cpp  ServerWireBridge.h  ServerWireBridge.mm  SessionHost_brokered.mm  VideoDecoder_android.cpp  VideoDecoder_apple.mm  VideoDecoder_ffmpeg.cpp  WebSocketClient.cpp
src/render/: AccelSynth.h  DirectRenderHost.h  DirectRenderHost.mm  PlayerRender.cpp
src/render/shaders/: ge_compose_fs.sc  ge_compose_vs.sc  ge_sprite_fs.sc  ge_sprite_vs.sc
tools/: AudioPlayer.cpp  AudioPlayer.h  Player.h  QRScanner.h  Receiver.h  bgfx_test.cpp  depgraph.py  icon-gen.cpp  imgdiff.cpp  init-android.sh  init-ios.sh  matrix-cell.sh  matrix-test.sh  patch-dawn.py  player.cpp  player_capture_apple.h  player_capture_apple.mm  player_core.cpp  player_core.h  player_orientation.h  player_orientation_ios.mm  player_orientation_stub.cpp  player_platform.h  player_platform_apple.cpp  receiver.cpp  receiver_core.cpp  receiver_platform.h  receiver_platform_apple.cpp  rotation-stability-test.sh  smoke-test.sh  spyder-pool.yaml  visual-regression.sh  wire-icons.py
tools/android/: .gitignore  build-deps.sh
tools/android-template/: .gitignore
tools/android-template/app/: build.gradle.in
tools/android-template/app/src/main/: AndroidManifest.xml.in
tools/android-template/app/src/main/cpp/: CMakeLists.txt.in
tools/android-template/app/src/main/java/: Activity.java.in
tools/android/app/: build.gradle
tools/android/app/src/main/: AndroidManifest.xml
tools/android/app/src/main/cpp/: CMakeLists.txt  QRScanner_android.cpp  main.cpp  player_platform_android.cpp  receiver_platform_android.cpp
tools/android/app/src/main/java/com/marcelocantos/player/: GeActivity.java  QRScannerBridge.java
tools/android/app/src/main/res/values/: strings.xml
tools/ios/: CMakeLists.txt  ExportOptions.plist  Info.plist  KeychainStore.h  KeychainStore.mm  QRScanner.h  QRScanner.mm  build-deps.sh  main.mm
tools/ios-template/: CMakeLists.txt.in  Info.plist.in
tools/macos/: build-deps.sh
tools/visual-regression-baselines/: README.md
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.css  App.tsx  GeWireMachine.ts  LogViewer.tsx  PhonePreview.tsx  PlayerList.tsx  QRCode.tsx  ServerList.tsx  SessionList.tsx  TweakPanel.tsx  main.tsx
(+5 files in other folders)
